--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -3,8 +3,8 @@
 #### [ 传习秘密讲话：狠批邓“黑猫白猫论”推崇“红猫”？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016973.md)
 #### [ 二十大召开前 红二代：不少人反对习近平连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017214.md)
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
-#### [ 习近平二十大自我接班 专家：或陷入另一雷区(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016980.md)
 #### [ 【内幕】刘亚洲代表核心太子党与习近平决裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/993813.md)
+#### [ 习近平二十大自我接班 专家：或陷入另一雷区(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016980.md)
 #### [ 专家：二十大后 习派人马能否占多数未定](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828992.md)
 #### [ 对孙力军感恩戴德 龚道安被判无期(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017201.md)
 #### [ 【远见快评】政治局名单生变？什伍连坐制重现](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829328.md)
@@ -48,6 +48,6 @@
 #### [ 贵阳市8官员因防疫不力遭免职或停职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017003.md)
 #### [ 【财商天下】中国“最不易”的一代 80后惹谁了？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13829078.md)
 #### [ 英日首相共同声明 联手对抗中共威胁](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13829250.md)
+#### [ 窃听高官秘密 “孙力军团伙”刘新云获刑14年(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017222.md)
 #### [ 【一线采访】武汉外经贸学院爆学生维权抗议 ](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828888.md)
 #### [ 美加军舰穿越台湾海峡 中共军机军舰窥视](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13829135.md)
-#### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
